--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ jobs:
   include:
     - name: "Python Tests"
       script:
-        - make test-py
+        - git clone -b interchange https://github.com/Xilinx/RapidWright.git
+        - CAPNP_PATH=$(pwd)/RapidWright/interchange/schema INTERCHANGE_SCHEMA_PATH=$(pwd)/RapidWright/interchange make test-py
         - test $(git status --porcelain | wc -l) -eq 0 || { git diff; false; }
     - name: "Check Formatting"
       script:
