--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,10 @@ jobs:
 
     - name: Get and build tools
       run: |
-        make build
-        git clone -b interchange https://github.com/Xilinx/RapidWright.git $GITHUB_WORKSPACE/RapidWright
-        make -C "$GITHUB_WORKSPACE/RapidWright" update_jars
-        git clone https://github.com/capnproto/capnproto-java.git $GITHUB_WORKSPACE/capnproto-java
+        make env
+        git clone -b interchange https://github.com/Xilinx/RapidWright.git $GITHUB_WORKSPACE/env/RapidWright
+        make -C "$GITHUB_WORKSPACE/env/RapidWright" update_jars
+        git clone https://github.com/capnproto/capnproto-java.git $GITHUB_WORKSPACE/env/capnproto-java
 
     - name: Test
       run: ./.github/workflows/test.sh
