--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8']
+        python-version: ['3.7', '3.8', '3.9']
     steps:
 
     - uses: actions/checkout@v1
@@ -22,8 +22,6 @@ jobs:
 
     - name: Install
       run: |
-        sudo apt-get update
-        sudo apt-get install clang-format-5.0 xsltproc git
         pip install --upgrade -r requirements.txt
 
     - name: Check formatting
