Add missing library dependency.
Signed-off-by: Keith Rothman <537074+litghost@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Install
       run: |
+        sudo apt-get install libyaml-dev libyaml-cpp-dev
         pip install --upgrade -r requirements.txt
 
     - name: Check formatting
