Add rapidyaml and pyyaml to install_requires.
rapidyaml needs to use a branch.

Signed-off-by: Keith Rothman <537074+litghost@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 pytest
 git+https://github.com/capnproto/pycapnp.git
+ninja
 pyyaml --global-option='--with-libyaml'
 yapf==0.24.0
+git+https://github.com/litghost/rapidyaml.git@fixup_python_packaging#egg=rapidyaml&subdirectory=api/python
 -e .
