--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ git+https://github.com/capnproto/pycapnp.git
 ninja
 pyyaml --global-option='--with-libyaml'
 yapf==0.24.0
+# TODO: https://github.com/SymbiFlow/python-fpga-interchange/issues/11
 git+https://github.com/litghost/rapidyaml.git@fixup_python_packaging#egg=rapidyaml&subdirectory=api/python
 -e .
