nexus: Update device_config.yaml
Signed-off-by: gatecat <gatecat@ds0.me>

--- a/test_data/nexus_device_config.yaml
+++ b/test_data/nexus_device_config.yaml
@@ -5,3 +5,13 @@ buckets:
 - bucket: LUTS
   cells:
     - LUT4
+- bucket: FFS
+  cells:
+    - FD1P3BX
+    - FD1P3DX
+    - FD1P3IX
+    - FD1P3JX
+- bucket: IOBs
+  cells:
+   - IB
+   - OB
