gh-actions: add swig for rapidyaml
This is to fix local testing of the CI script

Signed-off-by: Alessandro Comodi <acomodi@antmicro.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install
       run: |
-        sudo apt-get install libyaml-dev libyaml-cpp-dev
+        sudo apt-get install libyaml-dev libyaml-cpp-dev swig
         pip install --upgrade -r requirements.txt
 
     - name: Check formatting
