device_config: allow disabling specific cell to bel mappings
This comes in handy primarly for debugging purposes

Signed-off-by: Alessandro Comodi <acomodi@antmicro.com>

--- a/test_data/series7_device_config.yaml
+++ b/test_data/series7_device_config.yaml
@@ -57,3 +57,10 @@ buckets:
 # don't route through the following cells
 disabled_routethroughs:
   - BUFGCTRL
+# Do not allow cells to be placed at BELs
+disabled_cell_bel_map:
+  - cell: FDRE
+    bels:
+     - TFF
+     - IFF
+     - OUTFF
