--- a/test_data/series7_device_config.yaml
+++ b/test_data/series7_device_config.yaml
@@ -1,9 +1,28 @@
 # Which BEL names are global buffers for nextpnr?
-global_buffers:
+global_buffer_bels:
 - BUFG
 - BUFGCTRL
 - VCC
 - GND
+# Which cell names are global buffers, and which pins should use dedicated routing resources
+global_buffer_cells:
+  - cell: BUFG
+    pins: # list of pins that use global resources
+     - name: I # pin name
+       guide_placement: true # attempt to place so that this pin can use dedicated resources
+       max_hops: 10 # max hops of interconnect to search
+     - name: O
+       force_routing: true # the net connected to this pin _must_ use dedicated routing only
+  - cell: BUFGCTRL
+    pins:
+      - name: I0
+        guide_placement: true
+        max_hops: 10
+      - name: I1
+        guide_placement: true
+        max_hops: 10
+      - name: O
+        force_routing: true
 # How should nextpnr lump BELs during analytic placement?
 buckets:
 - bucket: FLIP_FLOPS
