device config: xc7: filter out cells2bel and routethrus
Signed-off-by: Alessandro Comodi <acomodi@antmicro.com>

--- a/test_data/series7_device_config.yaml
+++ b/test_data/series7_device_config.yaml
@@ -76,9 +76,20 @@ buckets:
 # don't route through the following cells
 disabled_routethroughs:
   - BUFGCTRL
+  - BUFR
 # Do not allow cells to be placed at BELs
 disabled_cell_bel_map:
   - cell: FDRE
+    bels:
+     - TFF
+     - IFF
+     - OUTFF
+  - cell: FDCE
+    bels:
+     - TFF
+     - IFF
+     - OUTFF
+  - cell: FDPE
     bels:
      - TFF
      - IFF
