--- a/test_data/series7_device_config.yaml
+++ b/test_data/series7_device_config.yaml
@@ -141,3 +141,376 @@ clusters:
         - ISERDESE2
       ports:
         - DATAOUT
+
+macro_clusters:
+- name: LUT6_2
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: LUT5
+          bels:
+            - D5LUT
+            - C5LUT
+            - B5LUT
+            - A5LUT
+        - cell: LUT6
+          bels:
+            - D6LUT
+            - C6LUT
+            - B6LUT
+            - A6LUT
+    - site: SLICEL
+      cells:
+        - cell: LUT5
+          bels:
+            - D5LUT
+            - C5LUT
+            - B5LUT
+            - A5LUT
+        - cell: LUT6
+          bels:
+            - D6LUT
+            - C6LUT
+            - B6LUT
+            - A6LUT
+- name: RAM16X2S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM16X1S0/SP
+          bels:
+            - D6LUT
+            - D5LUT
+            - B6LUT
+            - B5LUT
+        - cell: RAM16X1S1/SP
+          bels:
+            - C6LUT
+            - C5LUT
+            - A6LUT
+            - A5LUT
+- name: RAM16X4S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM16X2S0/RAM16X1S0/SP
+          bels:
+            - D6LUT
+            - D5LUT
+        - cell: RAM16X2S0/RAM16X1S1/SP
+          bels:
+            - C6LUT
+            - C5LUT
+        - cell: RAM16X2S1/RAM16X1S0/SP
+          bels:
+            - B6LUT
+            - B5LUT
+        - cell: RAM16X2S1/RAM16X1S1/SP
+          bels:
+            - A6LUT
+            - A5LUT
+- name: RAM16X8S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM16X2S0/RAM16X1S0/SP
+          bels:
+            - D6LUT
+        - cell: RAM16X2S0/RAM16X1S1/SP
+          bels:
+            - C6LUT
+        - cell: RAM16X2S1/RAM16X1S0/SP
+          bels:
+            - B6LUT
+        - cell: RAM16X2S1/RAM16X1S1/SP
+          bels:
+            - A6LUT
+        - cell: RAM16X2S2/RAM16X1S0/SP
+          bels:
+            - D5LUT
+        - cell: RAM16X2S2/RAM16X1S1/SP
+          bels:
+            - C5LUT
+        - cell: RAM16X2S3/RAM16X1S0/SP
+          bels:
+            - B5LUT
+        - cell: RAM16X2S3/RAM16X1S1/SP
+          bels:
+            - A5LUT
+- name: RAM32X1S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: SP
+          bels:
+            - D6LUT
+            - D5LUT
+            - C6LUT
+            - C5LUT
+            - B6LUT
+            - B5LUT
+            - A6LUT
+            - A5LUT
+- name: RAM32X1D
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: DP
+          bels:
+            - C6LUT
+            - C5LUT
+            - A6LUT
+            - A5LUT
+        - cell: SP
+          bels:
+            - D6LUT
+            - D5LUT
+            - B6LUT
+            - B5LUT
+- name: RAM32X2S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM32X1S0/SP
+          bels:
+            - D6LUT
+            - D5LUT
+            - B6LUT
+            - B5LUT
+        - cell: RAM32X1S1/SP
+          bels:
+            - C6LUT
+            - C5LUT
+            - A6LUT
+            - A5LUT
+- name: RAM32X4S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM32X2S0/RAM32X1S0/SP
+          bels:
+            - D6LUT
+            - D5LUT
+        - cell: RAM32X2S0/RAM32X1S1/SP
+          bels:
+            - C6LUT
+            - C5LUT
+        - cell: RAM32X2S1/RAM32X1S0/SP
+          bels:
+            - B6LUT
+            - B5LUT
+        - cell: RAM32X2S1/RAM32X1S1/SP
+          bels:
+            - A6LUT
+            - A5LUT
+- name: RAM32X8S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM32X4S1/RAM32X2S0/RAM32X1S0/SP
+          bels:
+            - D6LUT
+        - cell: RAM32X4S1/RAM32X2S1/RAM32X1S0/SP
+          bels:
+            - D5LUT
+        - cell: RAM32X4S1/RAM32X2S0/RAM32X1S1/SP
+          bels:
+            - C6LUT
+        - cell: RAM32X4S1/RAM32X2S1/RAM32X1S1/SP
+          bels:
+            - C5LUT
+        - cell: RAM32X4S0/RAM32X2S0/RAM32X1S0/SP
+          bels:
+            - B6LUT
+        - cell: RAM32X4S0/RAM32X2S1/RAM32X1S0/SP
+          bels:
+            - B5LUT
+        - cell: RAM32X4S0/RAM32X2S0/RAM32X1S1/SP
+          bels:
+            - A6LUT
+        - cell: RAM32X4S0/RAM32X2S1/RAM32X1S1/SP
+          bels:
+            - A5LUT
+- name: RAM32M
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAMA
+          bels:
+            - A5LUT
+        - cell: RAMA_D1
+          bels:
+            - A6LUT
+        - cell: RAMB
+          bels:
+            - B5LUT
+        - cell: RAMB_D1
+          bels:
+            - B6LUT
+        - cell: RAMC
+          bels:
+            - C5LUT
+        - cell: RAMC_D1
+          bels:
+            - C6LUT
+        - cell: RAMD
+          bels:
+            - D5LUT
+        - cell: RAMD_D1
+          bels:
+            - D6LUT
+- name: RAM64X1S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: SP
+          bels:
+            - D6LUT
+            - C6LUT
+            - B6LUT
+            - A6LUT
+- name: RAM64X1D
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: DP
+          bels:
+            - C6LUT
+            - A6LUT
+        - cell: SP
+          bels:
+            - D6LUT
+            - B6LUT
+- name: RAM64X2S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAM64X1S0/SP
+          bels:
+            - D6LUT
+            - B6LUT
+        - cell: RAM64X1S1/SP
+          bels:
+            - C6LUT
+            - A6LUT
+- name: RAM64M
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAMA
+          bels:
+            - A6LUT
+        - cell: RAMB
+          bels:
+            - B6LUT
+        - cell: RAMC
+          bels:
+            - C6LUT
+        - cell: RAMD
+          bels:
+            - D6LUT
+- name: RAM128X1S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: LOW
+          bels:
+            - D6LUT
+            - B6LUT
+        - cell: HIGH
+          bels:
+            - C6LUT
+            - A6LUT
+        - cell: F7
+          bels:
+            - F7BMUX
+            - F7AMUX
+- name: ROM128X1
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: LOW
+          bels:
+            - D6LUT
+            - B6LUT
+        - cell: HIGH
+          bels:
+            - C6LUT
+            - A6LUT
+        - cell: F7
+          bels:
+            - F7BMUX
+            - F7AMUX
+- name: RAM128X1D
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: SP.LOW
+          bels:
+            - D6LUT
+        - cell: SP.HIGH
+          bels:
+            - C6LUT
+        - cell: DP.LOW
+          bels:
+            - B6LUT
+        - cell: DP.HIGH
+          bels:
+            - A6LUT
+        - cell: F7.SP
+          bels:
+            - F7BMUX
+        - cell: F7.DP
+          bels:
+            - F7AMUX
+- name: RAM256X1S
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: RAMS64E_D
+          bels:
+            - D6LUT
+        - cell: RAMS64E_C
+          bels:
+            - C6LUT
+        - cell: RAMS64E_B
+          bels:
+            - B6LUT
+        - cell: RAMS64E_A
+          bels:
+            - A6LUT
+        - cell: F7.A
+          bels:
+            - F7AMUX
+        - cell: F7.B
+          bels:
+            - F7BMUX
+        - cell: F8
+          bels:
+            - F8MUX
+- name: R0M256X1
+  sites:
+    - site: SLICEM
+      cells:
+        - cell: D
+          bels:
+            - D6LUT
+        - cell: C
+          bels:
+            - C6LUT
+        - cell: B
+          bels:
+            - B6LUT
+        - cell: A
+          bels:
+            - A6LUT
+        - cell: F7.A
+          bels:
+            - F7AMUX
+        - cell: F7.B
+          bels:
+            - F7BMUX
+        - cell: F8
+          bels:
+            - F8MUX
+
