Fix gen_lut to use bel name and not bel type
Signed-off-by: Maciej Dudek <mdudek@antmicro.com>

--- a/test_data/gen_luts.yaml
+++ b/test_data/gen_luts.yaml
@@ -12,7 +12,7 @@ lutElements:
   luts:
     - width: 16
       bels:
-      - name: LUT4
+      - name: LUT
         inputPins:
         - I0
         - I1
