--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ pyyaml
 yapf==0.24.0
 # TODO: https://github.com/SymbiFlow/python-fpga-interchange/issues/11
 git+https://github.com/litghost/rapidyaml.git@fixup_python_packaging#egg=rapidyaml
+git+https://github.com/SymbiFlow/python-sdf-timing@99410bd
 -e .
