CI: [Rapidwright] Run make compile after make update_jars
Signed-off-by: Krzysztof Boronski <kboronski@antmicro.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
         make env
         git clone https://github.com/Xilinx/RapidWright.git $GITHUB_WORKSPACE/env/RapidWright
         make -C "$GITHUB_WORKSPACE/env/RapidWright" update_jars
+        make -C "$GITHUB_WORKSPACE/env/RapidWright" compile
         git clone https://github.com/capnproto/capnproto-java.git $GITHUB_WORKSPACE/env/capnproto-java
         git clone https://github.com/SymbiFlow/fpga-interchange-schema.git $GITHUB_WORKSPACE/env/fpga-interchange-schema
 
