Added all LUT-RAM macro expansions
Signed-off-by: Krzysztof Boronski <kboronski@antmicro.com>

--- a/test_data/xcup_device_config.yaml
+++ b/test_data/xcup_device_config.yaml
@@ -145,77 +145,162 @@ disabled_site_pips:
     opin: O6
 
 macro_clusters:
+- name: RAM32X1S
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: SP, bels: [H6LUT] }
+- name: RAM32X1D
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: SP, bels: [H6LUT] }
+    - { cell: DP, bels: [H6LUT] }
+- name: RAM32X16DR8
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMH_D1, bels: [H6LUT] }
+    - { cell: RAMG_D1, bels: [G6LUT] }
+    - { cell: RAMF_D1, bels: [F6LUT] }
+    - { cell: RAME_D1, bels: [E6LUT] }
+    - { cell: RAMD_D1, bels: [D6LUT] }
+    - { cell: RAMC_D1, bels: [C6LUT] }
+    - { cell: RAMB_D1, bels: [B6LUT] }
+    - { cell: RAMA_D1, bels: [A6LUT] }
+    - { cell: RAMH, bels: [H5LUT] }
+    - { cell: RAMG, bels: [G5LUT] }
+    - { cell: RAMF, bels: [F5LUT] }
+    - { cell: RAME, bels: [E5LUT] }
+    - { cell: RAMD, bels: [D5LUT] }
+    - { cell: RAMC, bels: [C5LUT] }
+    - { cell: RAMB, bels: [B5LUT] }
+    - { cell: RAMA, bels: [A5LUT] }
+- name: RAM32M
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMD_D1, bels: [H6LUT] }
+    - { cell: RAMC_D1, bels: [G6LUT] }
+    - { cell: RAMB_D1, bels: [F6LUT] }
+    - { cell: RAMA_D1, bels: [E6LUT] }
+    - { cell: RAMD, bels: [H5LUT] }
+    - { cell: RAMC, bels: [G5LUT] }
+    - { cell: RAMB, bels: [F5LUT] }
+    - { cell: RAMA, bels: [E5LUT] }
+- name: RAM32M16
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMH_D1, bels: [H6LUT] }
+    - { cell: RAMG_D1, bels: [G6LUT] }
+    - { cell: RAMF_D1, bels: [F6LUT] }
+    - { cell: RAME_D1, bels: [E6LUT] }
+    - { cell: RAMD_D1, bels: [D6LUT] }
+    - { cell: RAMC_D1, bels: [C6LUT] }
+    - { cell: RAMB_D1, bels: [B6LUT] }
+    - { cell: RAMA_D1, bels: [A6LUT] }
+    - { cell: RAMH, bels: [H5LUT] }
+    - { cell: RAMG, bels: [G5LUT] }
+    - { cell: RAMF, bels: [F5LUT] }
+    - { cell: RAME, bels: [E5LUT] }
+    - { cell: RAMD, bels: [D5LUT] }
+    - { cell: RAMC, bels: [C5LUT] }
+    - { cell: RAMB, bels: [B5LUT] }
+    - { cell: RAMA, bels: [A5LUT] }
+- name: RAM64X1S
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: SP, bels: [H6LUT] }
+- name: RAM64X2S
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAM64X1S0/SP, bels: [H6LUT] }
+    - { cell: RAM64X1S1/SP, bels: [G6LUT] }
+- name: RAM64X1D
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: SP, bels: [H6LUT] }
+    - { cell: DP, bels: [G6LUT] }
+- name: RAM64M
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMD, bels: [H6LUT] }
+    - { cell: RAMC, bels: [G6LUT] }
+    - { cell: RAMB, bels: [F6LUT] }
+    - { cell: RAMA, bels: [E6LUT] }
+- name: RAM64M8
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMH, bels: [H6LUT] }
+    - { cell: RAMG, bels: [G6LUT] }
+    - { cell: RAMF, bels: [F6LUT] }
+    - { cell: RAME, bels: [E6LUT] }
+    - { cell: RAMD, bels: [D6LUT] }
+    - { cell: RAMC, bels: [C6LUT] }
+    - { cell: RAMB, bels: [B6LUT] }
+    - { cell: RAMA, bels: [A6LUT] }
+- name: RAM64X8SW
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: RAMS64E1_H, bels: [H6LUT] }
+    - { cell: RAMS64E1_G, bels: [G6LUT] }
+    - { cell: RAMS64E1_F, bels: [F6LUT] }
+    - { cell: RAMS64E1_E, bels: [E6LUT] }
+    - { cell: RAMS64E1_D, bels: [D6LUT] }
+    - { cell: RAMS64E1_C, bels: [C6LUT] }
+    - { cell: RAMS64E1_B, bels: [B6LUT] }
+    - { cell: RAMS64E1_A, bels: [A6LUT] }
+- name: RAM128X1S
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: LOW, bels: [H6LUT] }
+    - { cell: HIGH, bels: [G6LUT] }
+    - { cell: F7, bels: [F7MUX_GH] }
+- name: RAM128X1D
+  sites:
+  - site: SLICEM
+    cells:
+    - { cell: SP.LOW, bels: [H6LUT] }
+    - { cell: SP.HIGH, bels: [G6LUT] }
+    - { cell: DP.LOW, bels: [F6LUT] }
+    - { cell: DP.HIGH, bels: [E6LUT] }
+    - { cell: F7.SP, bels: [F7MUX_GH] }
+    - { cell: F7.DP, bels: [F7MUX_EF] }
 - name: RAM256X1S
   sites:
   - site: SLICEM
     cells:
-    - cell: RAMS64E_D
-      bels:
-      - H6LUT
-    - cell: RAMS64E_C
-      bels:
-      - G6LUT
-    - cell: RAMS64E_B
-      bels:
-      - F6LUT
-    - cell: RAMS64E_A
-      bels:
-      - E6LUT
-    - cell: F7.A
-      bels:
-      - F7MUX_EF
-    - cell: F7.B
-      bels:
-      - F7MUX_GH
-    - cell: F8
-      bels:
-      - F8MUX_TOP
+    - { cell: RAMS64E_D, bels: [H6LUT] }
+    - { cell: RAMS64E_C, bels: [G6LUT] }
+    - { cell: RAMS64E_B, bels: [F6LUT] }
+    - { cell: RAMS64E_A, bels: [E6LUT] }
+    - { cell: F7.A, bels: [F7MUX_EF] }
+    - { cell: F7.B, bels: [F7MUX_GH] }
+    - { cell: F8, bels: [F8MUX_TOP] }
 - name: RAM512X1S
   sites:
   - site: SLICEM
     cells:
-    - cell: RAMS64E1_H
-      bels:
-      - H6LUT
-    - cell: RAMS64E1_G
-      bels:
-      - G6LUT
-    - cell: RAMS64E1_F
-      bels:
-      - F6LUT
-    - cell: RAMS64E1_E
-      bels:
-      - E6LUT
-    - cell: RAMS64E1_D
-      bels:
-      - D6LUT
-    - cell: RAMS64E1_C
-      bels:
-      - C6LUT
-    - cell: RAMS64E1_B
-      bels:
-      - B6LUT
-    - cell: RAMS64E1_A
-      bels:
-      - A6LUT
-    - cell: F7.A
-      bels:
-      - F7MUX_AB
-    - cell: F7.B
-      bels:
-      - F7MUX_CD
-    - cell: F7.C
-      bels:
-      - F7MUX_EF
-    - cell: F7.D
-      bels:
-      - F7MUX_GH
-    - cell: F8.A
-      bels:
-      - F8MUX_BOT
-    - cell: F8.B
-      bels:
-      - F8MUX_TOP
-    - cell: F9
-      bels:
-      - F9MUX
+    - { cell: RAMS64E1_H, bels: [H6LUT] }
+    - { cell: RAMS64E1_G, bels: [G6LUT] }
+    - { cell: RAMS64E1_F, bels: [F6LUT] }
+    - { cell: RAMS64E1_E, bels: [E6LUT] }
+    - { cell: RAMS64E1_D, bels: [D6LUT] }
+    - { cell: RAMS64E1_C, bels: [C6LUT] }
+    - { cell: RAMS64E1_B, bels: [B6LUT] }
+    - { cell: RAMS64E1_A, bels: [A6LUT] }
+    - { cell: F7.A, bels: [F7MUX_AB] }
+    - { cell: F7.B, bels: [F7MUX_CD] }
+    - { cell: F7.C, bels: [F7MUX_EF] }
+    - { cell: F7.D, bels: [F7MUX_GH] }
+    - { cell: F8.A, bels: [F8MUX_BOT] }
+    - { cell: F8.B, bels: [F8MUX_TOP] }
+    - { cell: F9, bels: [F9MUX] }
